<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoShop</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_list">GoShop</string>
    <string name="show_all">Show All</string>
    <string name="totals">Calculate Totals</string>
    <string name="checkout">Checkout</string>
    <string name="change_list">Change List</string>
    <string name="sort">Sort</string>
    <string name="stores">Stores</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="empty" />
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="no_items">No matches</string>
    <string name="name_label">Name</string>
    <string name="quantity_label">Quantity</string>
    <string name="units_label">Units</string>
    <string name="notes_label">Notes</string>
    <string name="price_label">Price</string>
    <string name="category_label">Category</string>
    <string name="confirm">Confirm</string>
    <string name="menu_create">Create</string>
    <string name="have">Have</string>
    <string name="purchased">Purchased</string>
    <string name="need">Need</string>
    <string name="show_all_on">Show all items</string>
    <string name="show_all_off">Show only needed and purchased items</string>
    <string name="stores_aisles">Edit stores/aisles</string>
    <string name="settings">Settings</string>
    <string name="pref_show_all">pref_show_all</string>
    <string name="pref_list">pref_list</string>
    <string name="pref_list_title">List</string>
    <string name="pref_store">pref_store</string>
    <string name="pref_store_title">Store</string>
    <string name="title_activity_import">Import</string>
    <string name="menu_import">Import</string>
    <string name="search_hint">Search GoShop</string>
    <string name="new_aisle">New Aisle</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store_aisle_selection">Store and Aisle</string>
    <string name="add_aisle">Add Aisle</string>
    <string name="default_units">each</string>
    <string name="new_store">New store</string>
    <string name="title_activity_item_edit">Edit Item</string>
    <string name="menu_cancel">Cancel</string>
    <string name="title_activity_aisle_edit">Edit Aisle</string>
    <string name="sort_label">Sort code</string>
    <string name="description_label">Description</string>
    <string name="pref_sms_recipient">pref_sms_recipient</string>
    <string name="pref_sms_recipient_title">Default SMS Recipient</string>
    <string name="menu_send">Send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_store">Delete this store</string>
    <string name="store_name">Store name</string>
    <string name="create">Create</string>
    <string name="delete_store_prompt">Are you sure you wish to delete this store? This will delete all aisles associated with it, and cannot be undone.</string>
    <string name="unfiled">Unfiled</string>
    <string name="rename_store">Rename this store</string>
    <string name="rename">Rename</string>
    <string name="everything_else">OTHER STORES</string>
    <string name="voice_names">Voice names</string>

</resources>